# q2_2025_chat_project_team_3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile.aggregator  Dockerfile.server  Doxyfile  LICENSE  README.md  config.json  protocol.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  init.sh  x64-linux-release-sanitized.cmake  x64-linux-release-tsan.cmake
.github/workflows/: build-package-cached.yml
aggregator/: CMakeLists.txt  config.json
aggregator/include/aggregator/: DrogonServerRegistry.h  IServerRegistry.h  MessageHandlerService.h  MessageHandlers.h  ServerRegistry.h  WsData.h  WsRequestProcessor.h
aggregator/include/aggregator/controller/: WsController.h
aggregator/src/: DrogonServerRegistry.cpp  MessageHandlerService.cpp  MessageHandlers.cpp  ServerRegistry.cpp  WsRequestProcessor.cpp  main.cpp
aggregator/src/controller/: WsController.cpp
client/: CMakeLists.txt
client/include/client/: accountSettings.h  app.h  appConfig.h  authPanel.h  cachedColorText.h  chatInterface.h  chatPanel.h  graphicsContextManager.h  initialPanel.h  mainWidget.h  message.h  messageView.h  messageWidget.h  passwordUtil.h  roomHeaderPanel.h  roomSettingsPanel.h  roomsPanel.h  serversPanel.h  textUtil.h  typingIndicatorPanel.h  user.h  userListPanel.h  userNameWidget.h  wsClient.h
client/src/: accountSettings.cpp  appConfig.cpp  authPanel.cpp  cachedColorText.cpp  chatInterface.cpp  chatPanel.cpp  graphicsContextManager.cpp  initialPanel.cpp  main.cpp  mainWidget.cpp  messageView.cpp  messageWidget.cpp  passwordUtil.cpp  roomHeaderPanel.cpp  roomSettingsPanel.cpp  roomsPanel.cpp  serversPanel.cpp  textUtil.cpp  typingIndicatorPanel.cpp  userListPanel.cpp  userNameWidget.cpp  wsClient.cpp
common/: CMakeLists.txt
common/include/: pch.h
common/include/common/: version.h
common/include/common/utils/: asyncSharedMutex.h  guarded.h  limits.h  utils.h
common/protobuf/: chat.proto
common/src/utils/: utils.cpp
db/: main.sql
examples/: docker-compose.yml
include/chat/: MessageHandlerService.h  MessageHandlers.h  WsAuthNotifierImpl.h  WsChat.h  WsData.h  WsRequestProcessor.h
include/db/: migrations.h
include/models/: Migrations.h
include/utils/: scoped_coro_transaction.h  utils.h
ports/libopaque/: CMakeLists.txt  config.cmake.in  portfile.cmake  vcpkg.json
ports/liboprf/: CMakeLists.txt  config.cmake.in  portfile.cmake  vcpkg.json
scripts/: generate_models.sh  psql.sh
server/: CMakeLists.txt  config.json
server/db/migrations/: 1748456285-create_users_table.sql  1748528131-create_rooms_table.sql  1748948314-create_messages_table.sql  1748953366-create_message_index.sql  1749017946-drop_unique_room_name.sql  1749725257-adding_hash_salt_col.sql  1750141769-user_room_roles.sql  1750344344-migrate_timestamps_to_bigint.sql  1751446692-room_membership.sql
server/include/server/aggregator/: WsClient.h
server/include/server/chat/: ChatRoomManager.h  DrogonRoomService.h  HttpCtrl.h  IAuthNotifier.h  IChatRoomService.h  IRoomService.h  MessageHandlerService.h  MessageHandlers.h  UserConnectionRegistry.h  UserRoomRegistry.h  WsAuthNotifierImpl.h  WsChat.h  WsData.h  WsRequestProcessor.h  passwordUtil.h
server/include/server/controller/: HttpController.h  WsController.h
server/include/server/db/: migrations.h
server/include/server/models/: Messages.h  Migrations.h  RoomMembership.h  Rooms.h  UserRoomData.h  UserRoomRoles.h  Users.h
server/include/server/utils/: scoped_coro_transaction.h  switch_to_io_loop.h  utils.h
server/src/: MessageHandlerService.cpp  MessageHandlers.cpp  WsRequestProcessor.cpp  main.cpp
server/src/chat/: ChatRoomManager.cpp  DrogonRoomService.cpp  HttpCtrl.cpp  MessageHandlerService.cpp  MessageHandlers.cpp  WsRequestProcessor.cpp  passwordUtil.cpp
server/src/controller/: HttpController.cpp  WsController.cpp
server/src/db/: migrations.cpp
server/src/models/: Messages.cc  Migrations.cc  RoomMembership.cc  Rooms.cc  UserRoomData.cc  UserRoomRoles.cc  Users.cc  model.json
server/src/utils/: scoped_coro_transaction.cpp
src/: main.cpp
src/models/: Migrations.cc  Rooms.cc  Users.cc
vcpkg-overlays/wxwidgets/: enable-color-font.patch  portfile.cmake
